--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -23,7 +23,9 @@ body:
       label: What happened?
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
-      value: "A bug happened!"
+      value: |
+      Write your details here and in case you want you add screenshots, use "#### Screenshots" as heading and add screenshots
+      below that
     validations:
       required: true
   - type: dropdown
@@ -42,10 +44,6 @@ body:
       label: Relevant log output
       description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
-  - type: markdown
-    id: upload-description
-    attributes: 
-      value: "#### If you have any screenshots, make sure to attach it in the comments section"
   - type: checkboxes
     id: terms
     attributes:
