--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@mantine/notifications": "^2.4.1",
     "@mantine/prism": "^2.4.1",
     "@next/bundle-analyzer": "^10.2.3",
-    "@sentry/nextjs": "^6.12.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
@@ -74,6 +73,14 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@sentry/browser": "^6.12.0",
+    "@sentry/cli": "^1.68.0",
+    "@sentry/core": "^6.12.0",
+    "@sentry/hub": "^6.12.0",
+    "@sentry/integrations": "^6.12.0",
+    "@sentry/minimal": "^6.12.0",
+    "@sentry/nextjs": "^6.12.0",
+    "@sentry/react": "^6.12.0",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
