--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test and release
+name: Release App
 
 # Run the workflow when a Pull Request is opened or when changes are pushed to master
 on:
@@ -14,18 +14,18 @@ jobs:
   # Waits for test jobs for each Node.js version to complete
   steps:
   - name: Checkout
-   uses: actions/checkout@v2
+    uses: actions/checkout@v2
 
   - name: Setup Node.js
-   uses: actions/setup-node@v1
-   with:
-    node-version: 16.x
+    uses: actions/setup-node@v1
+    with:
+     node-version: 16.x
 
   - name: Install
-   run: npm ci
+    run: npm ci
 
   - name: Release
-   run: npx semantic-release
-   env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    run: npx semantic-release
+    env:
+     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
