--- a/package.json
+++ b/package.json
@@ -73,6 +73,12 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -104,6 +110,7 @@
     "postcss": "^8.3.6",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.37.5",
+    "semantic-release": "^17.4.7",
     "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.7",
     "ts-jest": "^27.0.4",
