--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "graphql": "^15.5.1",
     "lightgallery": "^2.1.8",
     "next": "11.1.0",
+    "next-auth": "^3.29.0",
     "next-firebase-auth": "^0.13.3-alpha.1",
     "next-pwa": "^5.2.24",
     "next-seo": "^4.26.0",
     "next-urql": "^3.1.1",
+    "pg": "^8.7.1",
     "phosphor-react": "^1.3.1",
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.2.1",
