--- a/package.json
+++ b/package.json
@@ -46,13 +46,11 @@
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
-    "firebase": "^9.0.1-2021730202621",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
     "lightgallery": "^2.1.8",
     "next": "11.1.0",
     "next-auth": "^3.29.0",
-    "next-firebase-auth": "^0.13.3-alpha.1",
     "next-pwa": "^5.2.24",
     "next-seo": "^4.26.0",
     "next-urql": "^3.1.1",
@@ -86,7 +84,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.24",
-    "@types/node": "^14.14.39",
+    "@types/node": "^14.17.14",
     "@types/react": "^17.0.15",
     "@types/sharp": "^0.28.5",
     "@types/validator": "^13.6.3",
@@ -110,14 +108,15 @@
     "null-loader": "^4.0.1",
     "path": "^0.12.7",
     "postcss": "^8.3.6",
+    "prisma": "^2.30.3",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.37.5",
     "semantic-release": "^17.4.7",
     "style-loader": "^3.2.1",
     "tailwindcss": "^2.2.7",
     "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
     "typescript-plugin-css-modules": "^3.2.0"
   }
 }
