--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
     "react-headroom": "^3.1.1",
     "react-jss": "^10.7.1",
