--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@egjs/react-flicking": "^3.7.3",
     "@graphql-codegen/typescript-urql": "^2.0.11",
     "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "@mantine/core": "^2.4.1",
-    "@mantine/dates": "^2.4.1",
-    "@mantine/hooks": "^2.4.1",
-    "@mantine/notifications": "^2.4.1",
-    "@mantine/prism": "^2.4.1",
+    "@mantine/core": "^2.5.0",
+    "@mantine/dates": "^2.5.0",
+    "@mantine/hooks": "^2.5.0",
+    "@mantine/notifications": "^2.5.0",
+    "@mantine/prism": "^2.5.0",
     "@next/bundle-analyzer": "^10.2.3",
     "@prisma/client": "^3.0.2",
     "@tailwindcss/aspect-ratio": "^0.2.1",
@@ -45,7 +45,9 @@
     "boring-avatars": "^1.5.8",
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
-    "dayjs": "^1.10.6",
+    "dayjs": "^1.10.7",
+    "filepond": "^4.29.1",
+    "filepond-plugin-image-preview": "^4.6.10",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
     "lightgallery": "^2.1.8",
@@ -58,10 +60,12 @@
     "phosphor-react": "^1.3.1",
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.2.1",
+    "rc-upload": "^4.3.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
+    "react-filepond": "^7.1.1",
     "react-headroom": "^3.1.1",
     "react-jss": "^10.7.1",
     "react-lazyload": "^3.2.0",
