--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-headroom": "^3.1.1",
     "react-jss": "^10.7.1",
     "react-lazyload": "^3.2.0",
+    "react-reveal": "^1.2.2",
     "react-stickynode": "^4.0.0",
     "sharp": "^0.29.0",
     "tailwindcss-line-clamp": "^1.0.5",
