--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
           echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> other.txt
           echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> other.txt
           echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> other.txt
+          echo NEXT_PUBLIC_SUPABASE_ANON_KEY= ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }} >> other.txt
+          echo NEXT_PUBLIC_SUPABASE_URL= ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}           >> other.txt
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
@@ -44,5 +47,5 @@ jobs:
           context: .
           push: true
           tags: codingbolt/app:latest
-          secret-files: |
-            "my_tokens=./other.txt"
+          secrets: |
+            "./other.txt"
