--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rc-upload": "^4.3.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-content-loader": "^6.0.3",
     "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
     "react-filepond": "^7.1.1",
