--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "coding-bolt",
+  "name": "default",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "gulp": "npx gulp less",
-    "test": "jest --collectCoverage=true",
-    "test:ci": "jest --ci",
-    "gen:types": "cross-env npx openapi-typescript $process.env.NEXT_PUBLIC_SUPABASE_URL/rest/v1/?apikey=$process.env.NEXT_PUBLIC_SUPABASE_ANON_KEY --output types/supabase.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@codexteam/ajax": "^4.2.0",
     "@editorjs/checklist": "^1.3.0",
     "@editorjs/code": "^2.7.0",
     "@editorjs/editorjs": "^2.22.2",
@@ -27,107 +22,18 @@
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
     "@editorjs/warning": "^1.2.0",
-    "@egjs/flicking-plugins": "^4.2.1",
-    "@egjs/react-flicking": "^4.3.0",
-    "@graphql-codegen/typescript-urql": "^2.0.11",
-    "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "@mantine/core": "^2.5.0",
-    "@mantine/dates": "^2.5.0",
-    "@mantine/hooks": "^2.5.0",
-    "@mantine/notifications": "^2.5.0",
-    "@mantine/prism": "^2.5.0",
-    "@next/bundle-analyzer": "^10.2.3",
-    "@prisma/client": "^3.0.2",
-    "@supabase/supabase-js": "^1.23.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "@tanem/react-nprogress": "^3.0.75",
-    "@urql/exchange-graphcache": "^4.2.1",
-    "axios": "^0.21.1",
-    "boring-avatars": "^1.5.8",
-    "cleave.js": "^1.6.0",
-    "date-fns": "^2.23.0",
-    "dayjs": "^1.10.7",
-    "filepond": "^4.29.1",
-    "filepond-plugin-image-preview": "^4.6.10",
-    "formidable": "^1.2.2",
-    "graphql": "^15.5.1",
-    "lightgallery": "^2.1.8",
-    "next": "11.1.0",
-    "next-auth": "^3.29.0",
-    "next-pwa": "^5.2.24",
-    "next-seo": "^4.26.0",
-    "next-urql": "^3.1.1",
-    "pg": "^8.7.1",
-    "phosphor-react": "^1.3.1",
-    "prettier": "^2.2.1",
-    "prism-react-renderer": "^1.2.1",
-    "rc-upload": "^4.3.1",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-content-loader": "^6.0.3",
-    "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
-    "react-filepond": "^7.1.1",
-    "react-headroom": "^3.1.1",
-    "react-jss": "^10.7.1",
-    "react-lazyload": "^3.2.0",
-    "react-reveal": "^1.2.2",
-    "react-stickynode": "^4.0.0",
-    "sharp": "^0.29.0",
-    "simplebar-react": "^2.3.6",
-    "tailwindcss-line-clamp": "^1.0.5",
-    "unsplash-js": "^7.0.15",
-    "urql": "^2.0.4",
-    "urql-persisted-queries": "^0.1.0",
-    "use-dark-mode": "^2.3.1"
+    "tailwindcss": "^2.2.16",
+    "tailwindcss-line-clamp": "^1.0.5"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.3",
-    "@testing-library/dom": "^8.1.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^14.17.15",
-    "@types/react": "^17.0.15",
-    "@types/sharp": "^0.28.5",
-    "@types/validator": "^13.6.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "autoprefixer": "^10.3.2",
-    "babel-jest": "^27.0.6",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.24.0",
-    "eslint-config-next": "11.1.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "iniparser": "^1.0.5",
-    "jest": "^27.0.6",
-    "null-loader": "^4.0.1",
-    "path": "^0.12.7",
-    "postcss": "^8.3.6",
-    "prisma": "^3.0.2",
-    "react-test-renderer": "^17.0.2",
-    "sass": "^1.37.5",
-    "semantic-release": "^17.4.7",
-    "style-loader": "^3.2.1",
-    "tailwindcss": "^2.2.7",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "typescript-plugin-css-modules": "^3.2.0"
+    "@types/react": "^17.0.26",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.4.3"
   }
 }
