--- a/package.json
+++ b/package.json
@@ -22,18 +22,21 @@
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
     "@editorjs/warning": "^1.2.0",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
     "next": "11.1.2",
+    "phosphor-react": "^1.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.16",
-    "tailwindcss-line-clamp": "^1.0.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/react": "^17.0.26",
+    "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.16",
+    "tailwindcss-line-clamp": "^1.0.5",
     "typescript": "^4.4.3"
   }
 }
