--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
     "@editorjs/warning": "^1.2.0",
+    "@supabase/supabase-js": "^1.24.0",
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
@@ -35,6 +36,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.8",
+    "prisma": "^3.1.1",
     "tailwindcss": "^2.2.16",
     "tailwindcss-line-clamp": "^1.0.5",
     "typescript": "^4.4.3"
