--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react": "^17.0.26",
     "@types/sharp": "^0.29.2",
     "autoprefixer": "^10.3.6",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
