--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       #       - ./.next/cache
       - run:
           name: Install Dependencies
-          command: yarn install --frozen-lockfile
+          command: npm ci
       # - save_cache:
       #     key: dependency-cache-{{ checksum "yarn.lock" }}
       #     paths:
@@ -22,4 +22,4 @@ jobs:
       #       - ./.next/cache
       - run:
           name: Run Lint
-          command: yarn lint
+          command: npm run lint
