--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       #       - ./.next/cache
       - run:
           name: Install Dependencies
-          command: npm ci
+          command: npm install
       # - save_cache:
       #     key: dependency-cache-{{ checksum "yarn.lock" }}
       #     paths:
