--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "@tanem/react-nprogress": "^3.0.79",
     "axios": "^0.22.0",
     "formidable": "^1.2.2",
+    "jest": "^27.2.4",
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-testing-library": "^8.0.1",
+    "rewire": "^5.0.0",
     "sharp": "^0.29.1",
     "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.27",
     "@types/sharp": "^0.29.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
