--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@editorjs/checklist": "^1.3.0",
@@ -26,13 +27,10 @@
     "@tanem/react-nprogress": "^3.0.79",
     "axios": "^0.22.0",
     "formidable": "^1.2.2",
-    "jest": "^27.2.4",
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-testing-library": "^8.0.1",
-    "rewire": "^5.0.0",
     "sharp": "^0.29.1",
     "unsplash-js": "^7.0.15"
   },
@@ -48,8 +46,11 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-plugin-react": "^7.26.1",
+    "jest": "^27.2.4",
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
+    "react-testing-library": "^8.0.1",
+    "rewire": "^5.0.0",
     "tailwindcss": "^2.2.16",
     "tailwindcss-line-clamp": "^1.0.5",
     "typescript": "^4.4.3"
