--- a/.github/workflows/onPR.yml
+++ b/.github/workflows/onPR.yml
@@ -1,3 +1,4 @@
+name: Build Pull Request
 on: pull_request
 
 jobs:
@@ -7,13 +8,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: "16.x"
 
       # Install dependencies
-      - run: npm ci
+      - run: yarn
 
       # Build and output webpack stats to artifacts/webpack-stats.json
-      - run: npm run build --if-present
+      - run: yarn build --frozen-lock-file
 
       # Send webpack stats and build information to RelativeCI
       - name: Send webpack stats to RelativeCI
