--- a/.github/workflows/onPR.yml
+++ b/.github/workflows/onPR.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Send webpack stats to RelativeCI
         uses: relative-ci/agent-action@v1.1.0
         with:
-          webpackStatsFile: ./artifacts/webpack-stats.json
+          webpackStatsFile: ./artifacts/bundle-stats.json
           key: ${{ secrets.RELATIVE_CI_KEY }}
