--- a/.github/workflows/onPR.yml
+++ b/.github/workflows/onPR.yml
@@ -11,15 +11,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Restore NPM Cache
       - uses: actions/cache@v2
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Install packages
         run: yarn install
-
+      - name: Restore Next Cache
+      - uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]sx?') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - run: yarn build
         env:
           RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
