--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.3.6",
     "babel-jest": "^27.2.4",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
