--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@editorjs/quote": "^2.4.0",
     "@editorjs/table": "^2.0.1",
     "@editorjs/warning": "^1.2.0",
+    "@egjs/react-flicking": "^4.3.0",
     "@mantine/core": "^3.0.0",
     "@mantine/dates": "^3.0.0",
     "@mantine/dropzone": "^3.0.0",
@@ -41,6 +42,7 @@
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
+    "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
     "sharp": "^0.29.1",
     "unsplash-js": "^7.0.15"
