--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-plugin-react": "^7.26.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
     "jest-dom": "^4.0.0",
     "jest-watch-typeahead": "^1.0.0",
@@ -77,6 +78,7 @@
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
     "rewire": "^5.0.0",
+    "sass": "^1.43.2",
     "tailwindcss": "^2.2.16",
     "tailwindcss-line-clamp": "^1.0.5",
     "ts-jest": "^27.0.5",
