--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "conventionalCommits.scopes": ["Global", "Next Config", "App"]
+  "conventionalCommits.scopes": [
+    "Global",
+    "Next Config",
+    "App",
+    "Documentation"
+  ]
 }
