--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@editorjs/footnotes": "^1.1.0",
     "@editorjs/header": "^2.6.1",
     "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.3.1",
     "@editorjs/link-autocomplete": "^0.0.0",
+    "@editorjs/list": "^1.6.2",
     "@editorjs/marker": "^1.2.2",
     "@editorjs/nested-list": "^1.0.2",
     "@editorjs/paragraph": "^2.8.0",
@@ -44,6 +46,7 @@
     "react": "17.0.2",
     "react-devicons": "^2.14.0",
     "react-dom": "17.0.2",
+    "react-editor-js": "^1.10.0",
     "sharp": "^0.29.1",
     "unsplash-js": "^7.0.15"
   },
